force-app/main/default/objects/FIN_SettlementLine__c/FIN_SettlementLine__c.object-meta.xml
<CustomObject>
    <label>Settlement Line</label>
    <nameField>
        <displayFormat>Sl-{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlement Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>