force-app/main/default/objects/FIN_SettlementLine__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Event Name</description>
    <label>Event</label>
    <length>250</length>
    <type>Text</type>
</CustomField>