force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_AXSFee__c.field-meta.xml
<CustomField>
    <fullName>FIN_AXSFee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AXS Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>