force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_AXSPaymentFee__c.field-meta.xml
<CustomField>
    <fullName>FIN_AXSPaymentFee__c</fullName>
    <label>AXS Payment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>