force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_AXSPaymentFeeF__c.field-meta.xml
<CustomField>
    <fullName>FIN_AXSPaymentFeeF__c</fullName>
    <label>AXS Payment Fee (Fee and Component)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>