force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_AXSPremium__c.field-meta.xml
<CustomField>
    <fullName>FIN_AXSPremium__c</fullName>
    <label>AXS Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>