force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_Client__c.field-meta.xml
<CustomField>
    <fullName>FIN_Client__c</fullName>
    <label>Client</label>
    <length>250</length>
    <type>Text</type>
</CustomField>