force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_EventDescription__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventDescription__c</fullName>
    <label>Event Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>