force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_EventLookupCode__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventLookupCode__c</fullName>
    <label>Event Lookup Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>