force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_EventStartDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventStartDate__c</fullName>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>