force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_Group__c.field-meta.xml
<CustomField>
    <fullName>FIN_Group__c</fullName>
    <label>Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>