force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_InvoiceAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_InvoiceAdjustmentAmount__c</fullName>
    <label>Invoice Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>