force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_InvoiceAdjustmentComment__c.field-meta.xml
<CustomField>
    <fullName>FIN_InvoiceAdjustmentComment__c</fullName>
    <label>Invoice Adjustment Comment</label>
    <length>250</length>
    <type>Text</type>
</CustomField>