force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_ManualAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_ManualAdjustmentAmount__c</fullName>
    <label>Manual Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>