force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_ManualAdjustmentComment__c.field-meta.xml
<CustomField>
    <fullName>FIN_ManualAdjustmentComment__c</fullName>
    <label>Manual Adjustment Comment</label>
    <length>250</length>
    <type>Text</type>
</CustomField>