force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_Merchandise__c.field-meta.xml
<CustomField>
    <fullName>FIN_Merchandise__c</fullName>
    <label>Merchandise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>