force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_Mode__c.field-meta.xml
<CustomField>
    <fullName>FIN_Mode__c</fullName>
    <description>for testing settlement lines</description>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M - Subledger</fullName>
            </value>
            <value>
                <fullName>M - Payee / Subledger</fullName>
            </value>
            <value>
                <fullName>I - Invoice</fullName>
            </value>
            <value>
                <fullName>I - Payee / Invoice</fullName>
            </value>
            <value>
                <fullName>AdjustmentTotals</fullName>
                <label>Adjustment Totals</label>
            </value>
            <value>
                <fullName>AdjustmentDetails</fullName>
                <label>Adjustment Details</label>
            </value>
            <value>
                <fullName>StandardEntryEventPayee</fullName>
                <label>Standard Entry (Event / Payee)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>