force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_NonEvent__c.field-meta.xml
<CustomField>
    <fullName>FIN_NonEvent__c</fullName>
    <label>Non-Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>