force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_RemitAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_RemitAmount__c</fullName>
    <label>Remit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>