force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_RemittanceAccount__c.field-meta.xml
<CustomField>
    <fullName>FIN_RemittanceAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remittance Account</label>
    <referenceTo>FIN_Payee__c</referenceTo>
    <relationshipLabel>Settlement Lines</relationshipLabel>
    <relationshipName>Settlement_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>