force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_RemitTo__c.field-meta.xml
<CustomField>
    <fullName>FIN_RemitTo__c</fullName>
    <label>Remit to</label>
    <length>250</length>
    <type>Text</type>
</CustomField>