force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_Retain__c.field-meta.xml
<CustomField>
    <fullName>FIN_Retain__c</fullName>
    <label>Retain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>