force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_Season__c.field-meta.xml
<CustomField>
    <fullName>FIN_Season__c</fullName>
    <label>Season</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>