force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_SubContract__c.field-meta.xml
<CustomField>
    <fullName>FIN_SubContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubContract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Settlement Lines</relationshipLabel>
    <relationshipName>Settlement_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>