force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_SubContractRepGroup__c.field-meta.xml
<CustomField>
    <fullName>FIN_SubContractRepGroup__c</fullName>
    <label>SubContract Report Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>