force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_SubContractRepMode__c.field-meta.xml
<CustomField>
    <fullName>FIN_SubContractRepMode__c</fullName>
    <label>SubContract Report Mode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>