force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_TaxHeldWithAXS__c.field-meta.xml
<CustomField>
    <fullName>FIN_TaxHeldWithAXS__c</fullName>
    <label>Tax Held with AXS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>