force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_TicketsAndFees__c.field-meta.xml
<CustomField>
    <fullName>FIN_TicketsAndFees__c</fullName>
    <label>Tickets and Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>