force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_TotalFeeValue__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalFeeValue__c</fullName>
    <label>Total Fee Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>