force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_TotalRemitAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalRemitAmount__c</fullName>
    <label>Total Remit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>