force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_TotalTickets__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalTickets__c</fullName>
    <label>Total Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>