force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_TotalTicketValue__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalTicketValue__c</fullName>
    <label>Total Ticket Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>