force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_Venue__c.field-meta.xml
<CustomField>
    <fullName>FIN_Venue__c</fullName>
    <label>Venue</label>
    <length>250</length>
    <type>Text</type>
</CustomField>