force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_VenueDeliveryFee__c.field-meta.xml
<CustomField>
    <fullName>FIN_VenueDeliveryFee__c</fullName>
    <label>Venue Delivery Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>