force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_VenueLift__c.field-meta.xml
<CustomField>
    <fullName>FIN_VenueLift__c</fullName>
    <label>Venue Lift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>