force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_VenueUplift__c.field-meta.xml
<CustomField>
    <fullName>FIN_VenueUplift__c</fullName>
    <label>Venue Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>