force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_VIPPackages__c.field-meta.xml
<CustomField>
    <fullName>FIN_VIPPackages__c</fullName>
    <label>VIP Packages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>