force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_ZoneDesc__c.field-meta.xml
<CustomField>
    <fullName>FIN_ZoneDesc__c</fullName>
    <label>Zone Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>