force-app/main/default/objects/FIN_SettlementLine__c/fields/FIN_ZoneType__c.field-meta.xml
<CustomField>
    <fullName>FIN_ZoneType__c</fullName>
    <label>Zone Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>